--- a/stack/cloudformation/secureprivatecloud.yaml
+++ b/stack/cloudformation/secureprivatecloud.yaml
@@ -8,8 +8,12 @@ Parameters:
     Default: secure-private-cloud
   PublicSubnetName:
     Type: String
-    Description: The name of the Subnet resource(s)
+    Description: The name of the public Subnet resource(s)
     Default: public-subnet
+  PrivateSubnetName:
+    Type: String
+    Description: The name of the private Subnet resource(s)
+    Default: private-subnet
 
 Resources:
   # Defines a Virtual Private Cloud (VPC) with a CIDR block of 10.0.0.0/16
@@ -52,6 +56,30 @@ Resources:
       Tags:
         - Key: Name
           Value: !Join ["-", [!Ref PublicSubnetName, "2"]]
+
+  # These subnets are part of the VPC and are configured in different Availability Zones for high availability
+  # They are meant for resources that need to be not accessible from the internet, like a instances or services
+  PrivateSubnetOne:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref SecureVpc
+      CidrBlock: 10.0.3.0/24
+      AvailabilityZone: !Select [0, !GetAZs '']
+      Tags:
+        - Key: Name
+          Value: !Join ["-", [!Ref PrivateSubnetName, "1"]]
+
+  # These subnets are part of the VPC and are configured in different Availability Zones for high availability
+  # They are meant for resources that need to be not accessible from the internet, like a instances or services
+  PrivateSubnetTwo:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref SecureVpc
+      CidrBlock: 10.0.4.0/24
+      AvailabilityZone: !Select [1, !GetAZs '']
+      Tags:
+        - Key: Name
+          Value: !Join ["-", [!Ref PrivateSubnetName, "2"]]
 
   # Provides a route for traffic between your VPC and the internet
   # It's necessary for any resource in the public subnets to be accessible from the internet
@@ -105,6 +133,9 @@ Outputs:
   VpcId:
     Description: ID of the VPC
     Value: !GetAtt SecureVpc.VpcId
-  SubnetIds:
-    Description: ID(s) of the Subnet(s)
+  PublicSubnetIds:
+    Description: ID(s) of the public Subnet(s)
     Value: !Join [",", [!Ref PublicSubnetOne, !Ref PublicSubnetTwo]]
+  PrivateSubnetIds:
+    Description: ID(s) of the private Subnet(s)
+    Value: !Join [",", [!Ref PrivateSubnetOne, !Ref PrivateSubnetTwo]]
