--- a/tailaware-collector-configuration.yaml
+++ b/tailaware-collector-configuration.yaml
@@ -49,9 +49,9 @@ exporters:
   # example telemetry back-end
   # see: https://docs.newrelic.com/docs/more-integrations/open-source-telemetry-integrations/opentelemetry/get-started/opentelemetry-set-up-your-app/#review-settings
   otlp/newrelic:
-    endpoint: ${OTLP_NEW_RELIC_EXPORTER_ENDPOINT}
+    endpoint: otlp.eu01.nr-data.net:443
     headers:
-      api-key: ${NEW_RELIC_API_KEY}
+      api-key: ${TELEMETRY_BACKEND_API_KEY}
 
 service:
   pipelines:
