--- a/stack/cloudformation/main.yaml
+++ b/stack/cloudformation/main.yaml
@@ -106,6 +106,11 @@ Resources:
         HttpTrafficPort: !Ref HttpTrafficPort
         HttpTargetPort: !Ref HttpTargetPort
         HttpTargetGroupArn: !GetAtt PublicLoadBalancer.Outputs.HttpTargetGroupArn
+        TelemetryBackendApiKeySsmKeyName: !GetAtt SecureSystemParameters.Outputs.TelemetryBackendApiKeySsmResourceName
+        LoadBalancingCollectorConfMap: !GetAtt SecureSystemParameters.Outputs.LoadBalancingCollectorConfSsmResourceName
+        LoadBalancingCollectorConfigurationYaml: !GetAtt SecureSystemParameters.Outputs.LoadBalancingCollectorConfigurationSsmResourceName
+        TailAwareCollectorConfMap: !GetAtt SecureSystemParameters.Outputs.TailAwareCollectorConfSsmResourceName
+        TailAwareCollectorConfigurationYaml: !GetAtt SecureSystemParameters.Outputs.TailAwareCollectorConfigurationSsmResourceName
         LoadBalancingCollectorMaxCapacity: !Ref LoadBalancingCollectorMaxCapacity
         LoadBalancingCollectorMinCapacity: !Ref LoadBalancingCollectorMinCapacity
         LoadBalancingCollectorScalingTargetPercentage: !Ref LoadBalancingCollectorScalingTargetPercentage
