--- a/stack/cloudformation/stackbucket.yaml
+++ b/stack/cloudformation/stackbucket.yaml
@@ -6,6 +6,11 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub "${AWS::AccountId}-stack-bucket"
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        RestrictPublicBuckets: true
+        IgnorePublicAcls: true
       VersioningConfiguration:
         # we want to generate and manage versioning ourselves
         Status: Suspended
